--- a/src/index.css
+++ b/src/index.css
@@ -1,33 +1,34 @@
 :root {
-  --background-color: #ffffff;
-  --accent-color-1: #43A047;
+  --background-color: #F7F6F3;
+  --background-color-2: #FFFFFF;
+  --accent-color-1: #465162;
+  --accent-color-2: #E1E1E1;
 }
 
 body {
   height: 100vh;
   font-family: 'Roboto', sans-serif;
   margin: 0;
+  background: var(--background-color);
 }
 .App {
   height: 100vh;
   display: flex;
   flex-wrap: nowrap;
   flex-direction: row;
+  overflow: hidden;
 }
 
-.side-bar-container {
-  height: 500px;
+.nav-bar-container {
+  height: 100%;
   width: 300px;
-  /* position: fixed; */
-  margin-bottom: calc(100vh - 500px);
 }
 
 .side-nav-bar {
   width: calc(100% - 10px);
   height: 100%;
-  border-radius: 0 0 20px 0;
-  box-shadow: 0 0 20px #555555;
   display: block;
+  background: var(--background-color-2);
 }
 
 .bottom-nav-bar {
@@ -40,7 +41,7 @@ body {
 
 .title {
   text-decoration: none;
-  color: var(--background-color);
+  color: var(--accent-color-1);
   display: inline-block;
 }
 
@@ -57,23 +58,23 @@ body {
   height: 2em;
   position: relative;
   margin-left: 0.5em;
-  color: var(--background-color);
+  color: var(--accent-color-1);
 }
 .list-circle {
   height: 0.5em;
   width: 0.5em;
-  background-color: var(--background-color);
+  background-color: var(--accent-color-1);
   border-radius: 50%;
   display: inline-block;
   margin: 0;
   margin-right: 5px;
-  bottom: 0.125em;
+  bottom: 0.1em;
   position: relative;
 }
 .list-line {
   height: 0.6em;
   width: 3px;
-  background-color: var(--background-color);
+  background-color: var(--accent-color-1);
   margin: 0;
   position: absolute;
   left: calc(0.25em - 1.5px);
@@ -93,19 +94,18 @@ body {
 }
 .list-title{
   position: absolute;
-  left: 0.5em;
-  margin-left: 5px;
+  margin-left: 1em;
   padding-left: 5px;
-  width: calc(100% - 0.5em - 10px);
+  width: calc(100% - 1.5em - 15px);
+  height: 90%;
 }
 .list-title:not(.list-selected):hover {
-  background-color: #388e3d;
-  border-radius: 8px 0 0 8px;
+  background-color: var(--background-color);
+  border-radius: 8px;
 }
 .list-title.list-selected {
-  background-color: #ffffff;
-  color: #43A047;
-  border-radius: 8px 0 0 8px;
+  background-color: var(--accent-color-2);
+  border-radius: 8px;
 }
 .new-list {
   font-size: 18px;
@@ -128,12 +128,9 @@ body {
   bottom: 10px;
   width: calc(100% - 20px);
   height: 2em;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   padding-top: 10px;
   display: block;
-}
-.settings-line{
-  border-top: 2px var(--background-color) solid;
 }
 
 .semi-circle {
@@ -179,7 +176,7 @@ body {
 }
 .collapse-side-nav-bar {
   position: fixed;
-  color: var(--background-color);
+  color: var(--accent-color-1);
   top: 2em;
   left: calc(280px - 3em);
 }
@@ -191,7 +188,11 @@ body {
 .side-nav-bar-content {
   height: 100%;
   position: relative;
-  padding-left: 10px;
+  padding: 0 30px 0 30px;
+}
+
+.home-button-title {
+  padding-bottom: 10px;
 }
 
 button {
@@ -199,4 +200,48 @@ button {
   background-color: transparent;
   border: none;
   cursor: pointer;
+}
+
+.big-icon {
+  margin-right: 0.2em;
+  transform: translateY(0.11em);
+  font-size: 1em;
+}
+
+.lists-list {
+  padding-top: 1em;
+}
+
+.temp {
+  top: -0.6em;
+}
+
+.title-text {
+  text-decoration: none;
+  display: inline;
+}   
+
+.title-text:after {
+  position: absolute;
+  content: '';
+  height: 2px;
+  bottom: -2px; 
+
+  margin: 0 auto;
+  left: -100%;
+  right: 0;
+  width: 0;
+  background: var(--accent-color-1);
+ 
+  transition:0.3s;
+}
+
+.title-text:hover:after {
+ left: 0%;
+ width: 100%;
+}
+
+.title-text.selected:after {
+  left: 0%;
+  width: 100%;
 }
