--- a/src/index.css
+++ b/src/index.css
@@ -95,7 +95,7 @@ body {
 .list-title{
   position: absolute;
   margin-left: 1em;
-  padding-left: 5px;
+  padding-left: 10px;
   width: calc(100% - 1.5em - 15px);
   height: 90%;
 }
@@ -107,6 +107,7 @@ body {
   color: var(--background-color);
   background-color: var(--accent-color-1);
   border-radius: 8px;
+  transition: background-color 200ms linear, color 100ms linear;
 }
 .new-list {
   font-size: 18px;
