Rename Lists to groups Change animation for side nav bar to opacity to collapse

--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,8 @@ body {
 }
 
 .side-nav-bar {
-  width: calc(100% - 10px);
+  position: fixed;
+  width: 300px;
   height: 100%;
   display: block;
   background: var(--background-color-2);
