--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,52 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 :root {
-  --background-color: #F7F6F3;
+  --background-color: #ECEFF4;
   --background-color-2: #FFFFFF;
-  --accent-color-1: #465162;
+  --accent-color-1: #3B4252;
   --accent-color-2: #E1E1E1;
+  --falling-color: #EB5757;
+  --growing-color: #27AE60;
+}
+
+/* input[type=text] {
+  font-size: 22px;
+  width: 5em;
+  border: none;
+  border-bottom: 2px solid var(--accent-color-1);
+  text-align: center;
+} */
+input[type=text]:focus {
+  outline: none;
+}
+
+
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 2px grey;
+  border-radius: 10px
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: var(--accent-color-1); 
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
 }
 
 body {
   height: 100vh;
   font-family: 'Roboto', sans-serif;
   margin: 0;
-  background: var(--background-color);
+  background: var(--background-color-2);
+  overflow-y: hidden;
 }
 .App {
   height: 100vh;
@@ -29,7 +66,6 @@ body {
   width: 300px;
   height: 100%;
   display: block;
-  background: var(--background-color-2);
 }
 
 .bottom-nav-bar {
@@ -42,7 +78,7 @@ body {
 
 .title {
   text-decoration: none;
-  color: var(--accent-color-1);
+  /* color: var(--accent-color-1); */
   display: inline-block;
 }
 
@@ -59,12 +95,12 @@ body {
   height: 2em;
   position: relative;
   margin-left: 0.5em;
-  color: var(--accent-color-1);
+  /* color: var(--accent-color-1); */
 }
 .group-circle {
   height: 0.5em;
   width: 0.5em;
-  background-color: var(--accent-color-1);
+  /* background-color: var(--accent-color-1); */
   border-radius: 50%;
   display: inline-block;
   margin: 0;
@@ -75,7 +111,7 @@ body {
 .group-line {
   height: 0.6em;
   width: 3px;
-  background-color: var(--accent-color-1);
+  /* background-color: var(--accent-color-1); */
   margin: 0;
   position: absolute;
   left: calc(0.25em - 1.5px);
@@ -113,7 +149,7 @@ body {
   border-radius: 8px;
   transition: background-color 200ms linear, color 200ms linear;
 }
-.new-group {
+/* .new-group {
   font-size: 18px;
   height: 2em;
   line-height: 2em;
@@ -124,7 +160,9 @@ body {
   padding: 0 0.5em 0 0.5em;
   margin-top: 1em;
   border-radius: 10px;
-}
+  height: 100%;
+  width: 50%;
+} */
 
 .settings-content {
   margin: 0;
@@ -168,7 +206,7 @@ body {
 }
 
 .content {
-  margin: 4em;
+  padding: 4em;
   height: 100%;
   width: calc(100% - 300px - 8em);
   flex-grow: 1;
@@ -182,7 +220,7 @@ body {
 }
 .collapse-side-nav-bar {
   position: fixed;
-  color: var(--accent-color-1);
+  /* color: var(--accent-color-1); */
   top: 2em;
   left: calc(280px - 3em);
 }
@@ -218,7 +256,7 @@ button {
   padding-top: 1em;
 }
 
-.temp {
+.group-line-double-top {
   top: -0.6em;
 }
 
@@ -240,6 +278,7 @@ button {
   height: calc(100% - 8em);
   width: 50%;
   overflow-y: auto;
+  padding-right: 20px;
 }
 .graphs {
   display: inline-block;
@@ -247,17 +286,6 @@ button {
   height: calc(100% - 8em);
   width: 50%;
   right: 0;
-}
-.group-card {
-  width: 100%;
-  height: 10em;
-  border-radius: 10px;
-  background-color: var(--background-color-2);
-  margin-bottom: 20px;
-  padding: 40px;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
 }
 
 .visual-streak {
@@ -309,4 +337,63 @@ button {
   position: absolute;
   left: calc(50% - 1em);
   bottom: 0;
+}
+
+.card-title {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.habit-box {
+  margin-bottom: 10px;
+}
+
+.habit-text {
+  font-size: 24px;
+  display: inline-block;
+  font-weight: bold;
+  margin-right: 0.5em;
+  max-width: 100%;
+  overflow-wrap: break-word;
+}
+
+.habit-input-container, .habit-goal-container, .habit-goal-content {
+  display: inline-block;
+}
+
+.habit-input-container {
+  width: 70%;
+}
+
+.habit-goal-container {
+  width: 30%;
+}
+
+.habit-goal-container, .habit-input-container {
+  margin-bottom: 10px;
+  font-size: 22px;
+}
+
+
+.habit-number-falling {
+  color: var(--falling-color);
+}
+
+.habit-number-growing {
+  color: var(--falling-color);
+}
+
+.new-tasks-container {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 1.5em;
+  width: 100%;
+}
+.new-task {
+  /* width: 100%; */
+  width: fit-content;
+  flex: 100%;
+  margin-bottom: 1.5em;
 }
