--- a/src/index.css
+++ b/src/index.css
@@ -16,9 +16,9 @@
   border-bottom: 2px solid var(--accent-color-1);
   text-align: center;
 } */
-input[type=text]:focus {
+/* input[type=text]:focus {
   outline: none;
-}
+} */
 
 
 ::-webkit-scrollbar {
@@ -396,4 +396,17 @@ button {
   width: fit-content;
   flex: 100%;
   margin-bottom: 1.5em;
+}
+.category-tracker {
+  height: 1em;
+}
+
+.email-container {
+  width: 80%;
+  height: 2em;
+  border: 1px solid;
+}
+.log-in-input {
+  width: 300px;
+  border-radius: 10px;
 }
