Add some animations and better styling to log in Add page for registering Add button for using app without user

--- a/src/index.css
+++ b/src/index.css
@@ -410,3 +410,8 @@ button {
   width: 300px;
   border-radius: 10px;
 }
+
+.text-button:hover {
+  text-decoration:underline;
+	display:inline-block;
+}
