Remove obsolete code Continue transition away from mui Make theme context Make screen size context

--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -42,7 +42,7 @@
     flex-wrap: wrap;
 }
 
-.Vertical-Flex-Container {
+.Stack-Container {
     display: flex;
     gap: $base-gap;
     flex-wrap: wrap;
