--- a/client/src/styles/variables.scss
+++ b/client/src/styles/variables.scss
@@ -50,3 +50,8 @@ $elevation-1: 0px 1px 3px rgba(0, 0, 0, 0.15);
 // opacity
 $opacity-low: 0.8;
 $opacity-very-low: 0.6;
+
+// breakpoints
+$phone-breakpoint: 320px;
+$tablet-breakpoint: 768px;
+$desktop-breakpoint: 1024px;
