Add text box input Add drop down input Add playground page for showing of and testing components Remove unecessary imports Add some styles

--- a/client/src/components/buttons/Chip/Chip.module.scss
+++ b/client/src/components/buttons/Chip/Chip.module.scss
@@ -3,9 +3,9 @@
 .container {
     background-color: var(--surface-color);
     color: var(--on-surface-color);
-    border: $base-border;
     border-radius: $chip-border-radius;
     transition: 0.2s background-color, 0.2s color, 0.2s filter;
+    box-shadow: $elevation-1;
 
     &.selected {
         background-color: var(--primary-color);
