--- a/client/src/pages/Playground/Playground.module.scss
+++ b/client/src/pages/Playground/Playground.module.scss
@@ -4,6 +4,9 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
+    overflow-y: auto;
+    width: 90%;
+    height: 90%;
 }
 
 .test {
