Remove unecessary code Make it so that there is only one alert at a time Fix alert animations

--- a/client/src/components/etc/Alert/Alert.module.scss
+++ b/client/src/components/etc/Alert/Alert.module.scss
@@ -20,7 +20,7 @@
     padding: $base-padding;
     transform-origin: top;
     border-radius: $base-border-radius;
-    animation: moveGradient 3s;
+    // animation: moveGradient 0.2s;
 }
 
 .textContainer {
