--- a/client/src/components/indicators/CurrentProgress/CurrentProgress.module.scss
+++ b/client/src/components/indicators/CurrentProgress/CurrentProgress.module.scss
@@ -9,6 +9,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: var(--primary-color);
 }
 
 .outlineContainer {
@@ -96,5 +97,15 @@
     &.bottom {
         bottom: 0;
         transform-origin: right;
+    }
+}
+
+.button {
+    transition: transform 0.2s;
+    &:hover {
+        transform: scale(1.1);
+    }
+    &:active {
+        transform: scale(0.9);
     }
 }
