Add date to visual streak on hover

--- a/client/src/components/indicators/VisualStreak/VisualStreak.module.scss
+++ b/client/src/components/indicators/VisualStreak/VisualStreak.module.scss
@@ -57,4 +57,10 @@ $barHeight: 0.3em;
     position: absolute;
     bottom: -1.5em;
     left: -50%;
+    opacity: 0;
+    transition: opacity 0.2s;
+
+    &.hovered {
+        opacity: 1;
+    }
 }
