Adjust some styling Fix a scss bug on dropdown input Make input wrapper Start NewCategory card Add color for border

--- a/client/src/components/inputs/DropDownInput/DropDownInput.module.scss
+++ b/client/src/components/inputs/DropDownInput/DropDownInput.module.scss
@@ -54,7 +54,7 @@
             bottom: calc(50% - 0.875em);
             left: 0;
             opacity: 0.05;
-            border-radius: $base-border-radius / 2;
+            border-radius: calc($base-border-radius / 2);
         }
     }
 }
