--- a/client/src/components/buttons/Chip/Chip.module.scss
+++ b/client/src/components/buttons/Chip/Chip.module.scss
@@ -6,6 +6,7 @@
     border-radius: $chip-border-radius;
     transition: 0.2s background-color, 0.2s color, 0.2s filter;
     box-shadow: $elevation-1;
+    border: $base-border;
 
     &.selected {
         background-color: var(--primary-color);
