--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -65,6 +65,7 @@
     padding: $base-padding;
     border-radius: $base-border-radius;
     background-color: var(--surface-color);
+    border: $base-border;
     box-shadow: $elevation-1;
 }
 
