--- a/client/src/styles/variables.scss
+++ b/client/src/styles/variables.scss
@@ -1,6 +1,10 @@
+$theme: 'light';
+
 // colors
 @mixin getTheme($theme) {
     @if $theme == 'light' {
+        $theme: 'light';
+
         --background-color: #f3eff3;
         --on-background-color: #1C1B1F;
         --surface-color: #ffffff;
@@ -17,12 +21,14 @@
         --on-info-color: #ffffff;
         --border-color: #79747E;
     } @else if $theme == 'dark' {
+        $theme: 'dark';
+
         --background-color: #1C1B1F;
-        --on-background-color: #ffffff;
-        --surface-color: #ffffff;
-        --on-surface-color: #1C1B1F;
+        --on-background-color: #E6E1E5;
+        --surface-color: #1C1B1F;
+        --on-surface-color: #E6E1E5;
         --primary-color: #2E3440;
-        --on-primary-color: #ffffff;
+        --on-primary-color: #E6E1E5;
         --error-color: #db3b21;
         --on-error-color: #ffffff;
         --warning-color: #fc9403;
@@ -31,7 +37,7 @@
         --on-success-color: #ffffff;
         --info-color: #1f78d1;
         --on-info-color: #ffffff;
-        --border-color: #79747E;
+        --border-color: #938F99;
     }
 }
 
