Start updating nav bar component Start updating sidebar component Start updating home page component Change filled button container from div to button Add fields to right size of new category picker Style category picker Remove unneeded dependencies

--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -68,6 +68,10 @@
     border: $base-border;
     box-shadow: $elevation-1;
     display: inline-flex;
+
+    &.Symmetrical {
+        padding: $symmetrical-padding;
+    }
 }
 
 input {
