Change gitignore Move Alert component to utilities Make color input component Adjust some css Make new category component Make priority indicators component Add disabled to text box input Move top app bar to bars directory Make new category small screen friendly

--- a/client/src/components/inputs/TextBoxInput/TextBoxInput.module.scss
+++ b/client/src/components/inputs/TextBoxInput/TextBoxInput.module.scss
@@ -7,8 +7,12 @@
     font-size: $font-m;
     box-sizing: border-box;
 
-    &:hover {
+    &:hover:enabled {
         transform: scale(1.01);
+    }
+
+    :disabled {
+        cursor: not-allowed;
     }
 }
 
