--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -9,6 +9,13 @@
     --on-primary-color: #ffffff;
     --error-color: #B3261E;
     --on-error-color: #ffffff;
+    --red-color: #FC5C65;
+    --orange-color: #FD9644;
+    --yellow-color: #FED330;
+    --green-color: #26DE81;
+    --light-blue-color: #45AAF2;
+    --blue-color: #4B7BEC;
+    --purple-color: #A55EEA;
 }
 
 .App {
@@ -39,7 +46,7 @@
     display: flex;
     align-items: center;
     gap: $base-gap;
-    flex-wrap: wrap;
+    //flex-wrap: wrap;
     justify-content: space-between;
 }
 
@@ -103,8 +110,14 @@ input {
 @media (max-width: $tablet-breakpoint) {
     .content-container {
         height: calc(100% - 5em);
+        width: 100vw;
+    }
+    .Page {
+        box-sizing: border-box;
+        border: none !important;
+        height: 100%;
         width: 100%;
-        padding: 1em 1em 2.5em 1em;
+        border-radius: 0;
     }
 }
 
