Make Bottom bar Add label prop to icon button component Delete old Bottom bar component

--- a/client/src/components/bars/NavBar/NavBar.module.scss
+++ b/client/src/components/bars/NavBar/NavBar.module.scss
@@ -2,8 +2,7 @@
 
 @media (max-width: $tablet-breakpoint) {
   .container {
-    height: 0;
-    width: 0;
+    order: 3;
   }
 }
 @media (min-width: $tablet-breakpoint) {
