--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -1,4 +1,5 @@
 @import "./variables.scss";
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 :root {
     --background-color: #f3eff3;
@@ -25,6 +26,9 @@
     bottom: 0;
     left: 0;
     right: 0;
+    display: flex;
+    flex-direction: row;
+    gap: 0;
     &.light {
         @include getTheme('light');
     }
@@ -40,6 +44,7 @@ body {
     overflow-y: hidden;
     position: fixed;
     height: 100%;
+    font-family: 'Roboto', sans-serif;
 }
 
 .Button {
@@ -140,9 +145,7 @@ input {
         overflow-y: auto;
     }
     .App {
-        display: flex;
         flex-direction: column;
-        gap: 0;
     }
 }
 
@@ -161,4 +164,26 @@ input {
 .icon {
     position: absolute;
     top: -0.5em;
+}
+
+// Scrollbar
+::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 2px grey;
+    border-radius: 10px
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: var(--primary-color);
+    border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
 }
