--- a/client/src/components/buttons/IconButton/IconButton.module.scss
+++ b/client/src/components/buttons/IconButton/IconButton.module.scss
@@ -1,12 +1,13 @@
 @import 'src/styles/variables.scss';
 
 .container {
-  transition: transform 0.2s, color 0.1s;
+  transition: transform 0.2s, opacity 0.1s;
   display: inline-flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: $font-l;
+  color: var(--primary-color);
 
   &:hover {
     transform: scale(1.01);
@@ -16,10 +17,10 @@
   }
 
   &.selected {
-    color: var(--primary-color-color);
+    opacity: 1;
   }
 
   &.notSelected {
-    color: var(--border-color)
+    opacity: $opacity-low;
   }
 }
