Create new task page Create wrapper component for input pages Make Dropdown component disableable Remove box shadow from some components

--- a/client/src/components/bars/TopAppBar/topAppBar.module.scss
+++ b/client/src/components/bars/TopAppBar/topAppBar.module.scss
@@ -10,6 +10,7 @@
     border-bottom: $base-border;
     justify-content: flex-start;
     height: 1.5em;
+    min-height: 1.5em;
 
     &.center {
         justify-content: center;
