--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -92,6 +92,34 @@ body {
     }
 }
 
+.red {
+    background-color: var(--red-color);
+}
+
+.orange {
+    background-color: var(--orange-color);
+}
+
+.yellow {
+    background-color: var(--yellow-color);
+}
+
+.green {
+    background-color: var(--green-color);
+}
+
+.lightBlue {
+    background-color: var(--light-blue-color);
+}
+
+.blue {
+    background-color: var(--blue-color);
+}
+
+.purple {
+    background-color: var(--purple-color);
+}
+
 input {
     border: none;
     background: none;
