--- a/client/src/styles/variables.scss
+++ b/client/src/styles/variables.scss
@@ -5,7 +5,7 @@ $theme: 'light';
     @if $theme == 'light' {
         $theme: 'light';
 
-        --background-color: #f3eff3;
+        --background-color: #eff3f4;
         --on-background-color: #1C1B1F;
         --surface-color: #ffffff;
         --on-surface-color: #1C1B1F;
