--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -144,9 +144,17 @@ input {
     opacity: 0.5;
 }
 
+button {
+    text-decoration: none;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+}
+
 // App.js
 @media (max-width: $tablet-breakpoint) {
     .content-container {
+        box-sizing: border-box;
         width: 100vw;
         flex-grow: 1;
         overflow: auto;
@@ -166,6 +174,7 @@ input {
 
 @media (min-width: $tablet-breakpoint) {
     .content-container {
+        box-sizing: border-box;
         width: calc(100% - 300px - 8em);
         height: 100%;
         padding: 2em;
