Create divider component Change how settings are loaded Delete settings subpages Style redirect button Change theme context Change how chips work

--- a/client/src/components/utilities/InputPage/InputPage.module.scss
+++ b/client/src/components/utilities/InputPage/InputPage.module.scss
@@ -4,6 +4,7 @@
   position: relative;
   align-items: flex-start;
   flex-wrap: nowrap;
+  height: min-content;
 }
 
 .leftSide {
@@ -42,4 +43,10 @@
   position: absolute;
   right: 20px;
   top: 20px;
+}
+
+@media (max-width: $tablet-breakpoint) {
+  .container {
+    height: 100%;
+  }
 }
