--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -169,6 +169,11 @@ button {
     .App {
         flex-direction: column;
     }
+    .Rounded-Container {
+        width: 100%;
+        border-radius: 0;
+        height: 100%;
+    }
 }
 
 @media (min-width: $tablet-breakpoint) {
@@ -177,6 +182,9 @@ button {
         width: calc(100% - 300px - 8em);
         height: 100%;
         padding: 2em;
+    }
+    .Rounded-Container {
+        height: min-content;
     }
 }
 
